Updated all packages, updated code for latests OsmSharp and updated build configurations.

--- a/OpenLR.Tests/packages.config
+++ b/OpenLR.Tests/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime.PCL" version="3.5.0.2" targetFramework="net45" />
-  <package id="GeoAPI" version="1.7.2" targetFramework="net45" />
-  <package id="NetTopologySuite" version="1.13.2" targetFramework="net45" />
-  <package id="NetTopologySuite.IO.GeoJSON" version="1.13.2" targetFramework="net45" />
-  <package id="NetTopologySuite.IO.GeoTools" version="1.13.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
-  <package id="NUnit" version="2.6.3" targetFramework="net45" />
-  <package id="OsmSharp" version="4.3.0.946-beta" targetFramework="net45" />
-  <package id="OsmSharp.Routing.Shape" version="0.1.0.25-beta" targetFramework="net45" />
+  <package id="GeoAPI" version="1.7.3.1" targetFramework="net45" />
+  <package id="NetTopologySuite" version="1.13.3.2" targetFramework="net45" />
+  <package id="NetTopologySuite.IO" version="1.13.3.2" targetFramework="net45" />
+  <package id="NetTopologySuite.IO.GeoJSON" version="1.13.3.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="OsmSharp" version="4.3.0.949-beta" targetFramework="net45" />
+  <package id="OsmSharp.Routing.Shape" version="0.1.0.31-beta" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
-  <package id="Zlib.Portable" version="1.10.0" targetFramework="net45" />
+  <package id="Zlib.Portable" version="1.9.2" targetFramework="net45" />
 </packages>
