Added extra overload for use with preexisting vertices.

--- a/OpenLR.Referenced/OpenLR.Referenced.csproj
+++ b/OpenLR.Referenced/OpenLR.Referenced.csproj
@@ -167,6 +167,7 @@
     <Compile Include="ReferencedEncoderBase.cs" />
     <Compile Include="Osm\ReferencedOsmDecoder.cs" />
     <Compile Include="Osm\ReferencedOsmEncoder.cs" />
+    <Compile Include="ReferencedEncoderBaseExtensions.cs" />
     <Compile Include="ReferencedEncodingException.cs" />
     <Compile Include="Router\BasicRouter.cs" />
     <Compile Include="Router\BasicRouterDataSource.cs" />
