Updated version numbers.

--- a/OpenLR.Referenced.NWB/OpenLR.Referenced.NWB.csproj
+++ b/OpenLR.Referenced.NWB/OpenLR.Referenced.NWB.csproj
@@ -130,6 +130,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyVersion.cs">
+      <Link>Properties\SharedAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="NWBMapping.cs" />
     <Compile Include="ReferencedNWBDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
