--- a/OpenLR.Referenced.MultiNet/OpenLR.Referenced.MultiNet.csproj
+++ b/OpenLR.Referenced.MultiNet/OpenLR.Referenced.MultiNet.csproj
@@ -130,6 +130,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyVersion.cs">
+      <Link>Properties\SharedAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="ReferencedMultiNetDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferencedMultiNetEncoder.cs" />
