--- a/OpenLR.Referenced/packages.config
+++ b/OpenLR.Referenced/packages.config
@@ -1,13 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime.PCL" version="3.5.0.2" targetFramework="net45" />
-  <package id="GeoAPI" version="1.7.3.1" targetFramework="net45" />
-  <package id="NetTopologySuite" version="1.13.3.2" targetFramework="net45" />
-  <package id="NetTopologySuite.IO" version="1.13.3.2" targetFramework="net45" />
-  <package id="NetTopologySuite.IO.GeoJSON" version="1.13.3.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
-  <package id="OsmSharp" version="4.3.0.987-beta" targetFramework="net45" />
-  <package id="OsmSharp.Routing.Shape" version="0.1.0.43-beta" targetFramework="net45" />
+  <package id="OsmSharp.Core" version="0.1.2-rc1-0104" targetFramework="net45" />
+  <package id="OsmSharp.Routing" version="0.1.1-beta-0108" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
+  <package id="Reminiscence" version="0.1.0.31-beta" targetFramework="net45" />
   <package id="Zlib.Portable" version="1.9.2" targetFramework="net45" />
 </packages>
