--- a/OpenLR.Tests.Functional/OpenLR.Tests.Functional.csproj
+++ b/OpenLR.Tests.Functional/OpenLR.Tests.Functional.csproj
@@ -82,6 +82,8 @@
     <Compile Include="Download.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Netherlands.cs" />
+    <Compile Include="PerformanceInfoConsumer.cs" />
+    <Compile Include="PerformanceInfoConsumerExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
