--- a/OpenLR/OpenLR.csproj
+++ b/OpenLR/OpenLR.csproj
@@ -100,6 +100,7 @@
     <Compile Include="ILocationReference.cs" />
     <Compile Include="ItineroExtensions.cs" />
     <Compile Include="LocationExtensions.cs" />
+    <Compile Include="Matching\MatchScoring.cs" />
     <Compile Include="Model\Locations\CircleLocation.cs" />
     <Compile Include="Model\Locations\ClosedLineLocation.cs" />
     <Compile Include="Model\Locations\GeoCoordinateLocation.cs" />
@@ -159,8 +160,8 @@
       <HintPath>..\packages\NetTopologySuite.1.14\lib\portable-net403+sl5+netcore45+wpa81+wp8+MonoAndroid10+XamariniOS10+MonoTouch10\GeoAPI.Bootstrapper.NetTopologySuite.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Itinero, Version=0.22.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Itinero.0.22.0-rc1\lib\portable-net40+sl4+win8+wp7\Itinero.dll</HintPath>
+    <Reference Include="Itinero, Version=0.23.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Itinero.0.23.1-rc1\lib\portable-net40+sl4+win8+wp7\Itinero.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NetTopologySuite, Version=1.14.0.0, Culture=neutral, PublicKeyToken=f580a05016ebada1, processorArchitecture=MSIL">
