--- a/OpenLR.Tests.Functional/packages.config
+++ b/OpenLR.Tests.Functional/packages.config
@@ -3,7 +3,9 @@
   <package id="GeoAPI" version="1.7.4" targetFramework="net452" />
   <package id="Itinero" version="0.23.1-rc1" targetFramework="net452" />
   <package id="Itinero.Geo" version="0.23.1-rc1" targetFramework="net452" />
+  <package id="Itinero.IO.Shape" version="0.23.1-rc1" targetFramework="net452" />
   <package id="NetTopologySuite" version="1.14" targetFramework="net452" />
+  <package id="NetTopologySuite.IO" version="1.14.0.1" targetFramework="net452" />
   <package id="NetTopologySuite.IO.GeoJSON" version="1.14" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net452" />
